# microbit_statemachine

./: Cargo.toml  Embed.toml
src/: button.rs  channel.rs  led.rs  main.rs  time.rs
